# legion

./: .travis.yml  LICENSE  README.md  legion.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Server.hs
test/: Spec.hs
