name:                legion
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aviaviavi/legion#readme
license:             BSD3
license-file:        LICENSE
author:              Avi Press
maintainer:          avipress@gmail.com
copyright:           2017 Avi 
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , cryptohash
                     , mtl
                     , text
                     , binary
                     , time

executable legion-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       Spock >= 0.11
                     , aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , cryptohash
                     , mtl
                     , text
                     , time
                     , distributed-process-p2p
                     , distributed-process
                     , async
                     , either
                     , hslogger 
                     , legion

test-suite legion-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      app test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:  Spock >= 0.11
                , base
                , tasty
                , tasty-hunit >= 0.9.2
                , aeson
                , base >= 4.7 && < 5
                , bytestring
                , cryptohash
                , mtl
                , text
                , time
                , legion

